fix: nav z-index and subheader margin

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -10,6 +10,8 @@
 }
 
 .subheader {
+  margin-bottom: 1rem;
+
   .Polaris-Box {
     border-radius: 0;
     box-shadow: none;
