--- a/src/components/MobileNav/MobileNav.scss
+++ b/src/components/MobileNav/MobileNav.scss
@@ -12,6 +12,7 @@
     left: 0;
     display: flex;
     justify-content: space-around;
+    z-index: 2;
   }
 
   &__list {
